src/objects/SFDC_Schedule__c.object
<CustomObject>
    <description>Resources project their schedules in terms of percentage utilization on a specific Project.</description>
    <fields>
        <fullName>Fri_booked__c</fullName>
        <label>Fri %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fri_booked_detail__c</fullName>
        <label>F detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mon_booked__c</fullName>
        <label>Mon %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mon_booked_detail__c</fullName>
        <label>M detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N40000001HoChEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N40000001HoCcEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sat_booked__c</fullName>
        <label>Sat %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sat_booked_detail__c</fullName>
        <label>Sa detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sun_booked__c</fullName>
        <label>Sun %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sun_booked_detail__c</fullName>
        <label>Su detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thu_booked__c</fullName>
        <label>Thu %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Thu_booked_detail__c</fullName>
        <label>Th detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tue_booked__c</fullName>
        <label>Tue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tue_booked_detail__c</fullName>
        <label>T detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wed_booked__c</fullName>
        <label>Wed %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wed_booked_detail__c</fullName>
        <label>W detail</label>
        <picklist>
            <picklistValues>
                <fullName>work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out-of-town</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <label>Schedule</label>
    <nameField>
        <displayFormat>Schedule {000}</displayFormat>
        <label>Schedule#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>